# SIMBIOLOGY-MCP

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  conftest.py  main.py  proof_of_concept.py  pyproject.toml  requirements.txt  setup_matlab_venv.ps1  setup_venv.ps1
.github/workflows/: deploy-test.yml  release.yml  test.yml
core/: __init__.py  sbio_model.py  sbio_service.py
docs/superpowers/plans/: 2026-06-04-core-module.md
docs/superpowers/specs/: 2026-06-04-core-module-design.md
engine/: __init__.py  exceptions.py  matlab_layer.py
examples/: demo_simulation.py
interfaces/: __init__.py  cli.py  mcp_server.py
scripts/: get_skill.py  setup.py  tui.py
simbiology_mcp/: __init__.py  __main__.py  configure_mcp.py
simbiology_mcp/core/: __init__.py  sbio_model.py  sbio_service.py
simbiology_mcp/engine/: exceptions.py  matlab_layer.py
simbiology_mcp/interfaces/: cli.py  mcp_server.py
simbiology_mcp/scripts/: __init__.py  configure_mcp.py  get_skill.py  setup.py
simbiology_mcp/skills/: SKILL.md  __init__.py
simbiology_mcp/tools/: __init__.py  analysis_tools.py  external_tools.py  registry.py  sbio_tools.py
skills/: SKILL.md
skills/simbiology_workflow/: SKILL.md  __init__.py
tests/: conftest.py  test_core.py  test_matlab_layer.py
tests/core/: conftest.py  test_core.py  test_simulation.py  test_tools_matlab.py
tests/engine/: test_matlab_layer.py
tests/prompts/: test1.md  test2.md  test3.md  test4.md  test5.md
tests/samples/: analysis_sample.csv
tests/tools/: test_add_tool.py
tests/unit/: test_analysis_tools.py  test_builders.py  test_configure_mcp.py  test_exports.py  test_igem_tools.py  test_mcp_server.py  test_package_layout.py  test_pubmed_fulltext.py  test_sabio_tools.py  test_sbio_model_helpers.py  test_sbio_model_runtime.py  test_sbio_service_autosave.py  test_sbio_service_unit.py  test_sbio_tools.py  test_scripts.py
tools/: __init__.py  add_tool.py  analysis_tools.py  external_tools.py  registry.py  sbio_tools.py  tool.py
