[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "simbiology-mcp"
version = "0.1.0"
description = "Model Context Protocol server for MATLAB SimBiology: build, modify, simulate, and export systems-biology models from AI agents."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Yojith Sai Biradavolu", email = "yojith23@gmail.com" },
           { name = "Sepanta Yalameha", email = "sepantayalameha2006@gmail.com" }]
keywords = ["mcp", "simbiology", "matlab", "systems-biology", "pk-pd", "modeling"]

# Direct runtime dependencies only. The fully pinned transitive closure lives in
# uv.lock.
dependencies = [
    "fastmcp>=3.4,<4",
    "httpx>=0.28",
    "python-dotenv>=1.2",
    "igem-registry-api>=0.1",
]

[project.optional-dependencies]
dev = ["coverage>=7", "pytest>=8"]
# 'matlab' pulls matlabengine from PyPI, whose version must match your installed
# MATLAB release. simbiology_mcp/scripts/setup.py installs it straight from your local MATLAB
# instead; prefer that unless you know the PyPI version lines up.
matlab = ["matlabengine"]

[project.scripts]
simbiology-mcp = "simbiology_mcp.interfaces.cli:main"

[tool.setuptools.packages.find]
include = ["simbiology_mcp*"]

[tool.setuptools.package-data]
"simbiology_mcp.skills" = ["SKILL.md"]

[tool.coverage.run]
source = ["simbiology_mcp"]

[tool.black]
line-length = 200
target-version = ["py312"]
